<project>
  <parent>
    <groupId>io.teknek.deliverance</groupId>
    <artifactId>deliverance-parent</artifactId>
    <version>0.0.2-SNAPSHOT</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>vdd</artifactId>
  <name>vdd</name>
  <properties>

  </properties>

  <dependencyManagement>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>io.teknek.deliverance</groupId>
      <artifactId>core</artifactId>
      <version>${project.version}</version>
    </dependency>

    <dependency>
      <groupId>io.teknek.deliverance</groupId>
      <artifactId>native</artifactId>
      <version>${project.version}</version>
      <classifier>${os.detected.name}-x86_64</classifier>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j-api.version}</version>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>25</release>
          <jdkToolchain>
            <version>25</version>
          </jdkToolchain>
          <compilerArgs>
            <arg>--add-modules</arg>
            <arg>jdk.incubator.vector</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire.version}</version>
        <configuration>
          <argLine>
            --add-opens java.base/java.nio=ALL-UNNAMED
            --add-modules jdk.incubator.vector
            -Djdk.attach.allowAttachSelf=true
          </argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>  
